--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,7 +5,7 @@ description: Demonstrates how to use the live_photo plugin.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=2.18.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,12 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  wechat_assets_picker: ^8.0.2
-  fluttertoast: ^8.0.9
-  extended_image: ^6.3.0
-  path_provider: ^2.0.11
-  image_editor: ^1.1.0
-  image: ^3.2.0
+  wechat_assets_picker: ^9.4.1
+  flutter_easyloading: ^3.0.5
+
+dependency_overrides:
+  win32: ^5.9.0
+
 
 dev_dependencies:
   flutter_test:
